--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "string_decoder": "^1.1.1",
     "strip-json-comments": "^2.0.1",
     "through": "^2.3.8",
-    "uglify-js": "^3.4.0",
+    "uglify-es": "^3.3.9",
     "url": "^0.11.0",
     "util": "^0.11.0"
   },
